--- a/app/globals.css
+++ b/app/globals.css
@@ -1,10 +1,12 @@
-@import "tailwindcss";
+@import 'tailwindcss';
 
 @custom-variant dark (&:is(.dark *));
 
 @theme {
-  --color-yellow: #fffd82;
-  --color-red: #e84855;
+  --color-yellow: hsl(var(--yellow-color));
+  --color-red: hsl(var(--red-color));
+  --color-gray: hsl(var(--gray-color));
+
   --color-border: hsl(var(--border));
   --color-input: hsl(var(--input));
   --color-ring: hsl(var(--ring));
@@ -70,6 +72,10 @@
 
 @layer base {
   :root {
+    --yellow-color: 43 100% 55%;
+    --red-color: 0 82% 42%;
+    --gray-color: 0 2% 78%;
+
     --background: 0 0% 100%;
     --foreground: 240 10% 3.9%;
 
@@ -94,7 +100,7 @@
     --destructive: 0 84.2% 60.2%;
     --destructive-foreground: 0 0% 98%;
 
-    --border: 240 5.9% 90%;
+    --border: 240 3% 73;
     --input: 240 5.9% 90%;
     --ring: 240 10% 3.9%;
 
@@ -102,6 +108,10 @@
   }
 
   .dark {
+    --yellow-color: 56 100% 75%;
+    --red-color: 356 79% 59%;
+    --gray-color: 0 0% 54%;
+
     --background: 240 10% 3.9%;
     --foreground: 0 0% 98%;
 
